--- a/vnext/Microsoft.ReactNative.IntegrationTests/packages.config
+++ b/vnext/Microsoft.ReactNative.IntegrationTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-	<package id="Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn" version="1.8.1" targetFramework="native" />
-	<package id="Microsoft.VCRTForwarders.140" version="1.0.6" targetFramework="native" />
-	<package id="Microsoft.Windows.CppWinRT" version="2.0.200615.7" targetFramework="native" />
+  <package id="Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn" version="1.8.1" targetFramework="native" />
+  <package id="Microsoft.VCRTForwarders.140" version="1.0.6" targetFramework="native" />
+  <package id="Microsoft.Windows.CppWinRT" version="2.0.200615.7" targetFramework="native" />
+  <package id="XamlStraddle" version="0.0.2" targetFramework="native" />
 </packages>
