--- a/packages/microsoft-reactnative-sampleapps/windows/SampleAppCPP/packages.config
+++ b/packages/microsoft-reactnative-sampleapps/windows/SampleAppCPP/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.UI.Xaml" version="2.3.191129002" targetFramework="native" />
   <package id="Microsoft.Windows.CppWinRT" version="2.0.200615.7" targetFramework="native" />
+  <package id="XamlStraddle" version="0.0.3" targetFramework="native" />
 </packages>
