--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "react": "16.13.0",
-    "react-native": "0.0.0-4a48b021d",
+    "react-native": "0.63.0",
     "react-native-windows": "0.63.0-preview.0"
   },
   "devDependencies": {
