--- a/packages/react-native-windows-init/package.json
+++ b/packages/react-native-windows-init/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": "https://github.com/microsoft/react-native-windows",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "scripts": {
     "build": "just-scripts build",
     "clean": "just-scripts clean",
