--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -2,7 +2,7 @@
 parameters:
   - name: language
     type: string
-  - name: version
+  - name: rnVersion
     type: string
   - name: platform
     type: string
@@ -63,8 +63,16 @@ steps:
     displayName: Add npm user to verdaccio
 
   - script: |
-      npx --no-install beachball publish --branch origin/$(System.PullRequest.TargetBranch) --no-push --registry http://localhost:4873 --yes --access public $(extraPublishArgs)
+      npx --no-install beachball publish --branch origin/$(System.PullRequest.TargetBranch) --no-push --registry http://localhost:4873 --yes --access public --changehint "Run `yarn change` from root of repo to generate a change file." $(extraPublishArgs)
     displayName: Publish packages to verdaccio
+
+  - task: CmdLine@2
+    displayName: Set Version Env Vars
+    name: setVersionEnvVars
+    inputs:
+      script: node ./.ado/setVersionEnvVars.js
+    env:
+      RUNNER_TEMP: $(Build.StagingDirectory)
 
   - task: NuGetToolInstaller@0
     inputs:
@@ -74,7 +82,7 @@ steps:
   - task: CmdLine@2
     displayName: Init new project
     inputs:
-      script: npx react-native init testcli --npm --version ${{ parameters.version }}
+      script: npx react-native init testcli --npm --version ${{ parameters.rnVersion }}
       workingDirectory: $(Agent.BuildDirectory)
 
   - task: DownloadBuildArtifacts@0
@@ -87,14 +95,14 @@ steps:
   - task: CmdLine@2
     displayName: Apply windows template (with nuget)
     inputs:
-      script: npx react-native-windows-init --verbose --version $(npmTag) --overwrite --language ${{ parameters.language }} ${{ parameters.additionalInitArguments }} --experimentalNuGetDependency true --nuGetTestFeed $(System.DefaultWorkingDirectory)\NuGetTestFeed --nuGetTestVersion ${{ parameters.version }}
+      script: npx react-native-windows-init --verbose --version $(npmVersion) --overwrite --language ${{ parameters.language }} ${{ parameters.additionalInitArguments }} --experimentalNuGetDependency true --nuGetTestFeed $(System.DefaultWorkingDirectory)\NuGetTestFeed
       workingDirectory: $(Agent.BuildDirectory)\testcli
     condition: ${{ parameters.useNuGet }}
 
   - task: CmdLine@2
     displayName: Apply windows template (without nuget)
     inputs:
-      script: npx react-native-windows-init --verbose --version $(npmTag) --overwrite --language ${{ parameters.language }} ${{ parameters.additionalInitArguments }}
+      script: npx react-native-windows-init --verbose --version $(npmVersion) --overwrite --language ${{ parameters.language }} ${{ parameters.additionalInitArguments }}
       workingDirectory: $(Agent.BuildDirectory)\testcli
     condition: ${{ not(parameters.useNuGet) }}
 
