ReAdd codegen project ot the solution

--- a/vnext/package.json
+++ b/vnext/package.json
@@ -87,6 +87,7 @@
     "/Microsoft.ReactNative",
     "/Microsoft.ReactNative.Cxx",
     "/Microsoft.ReactNative.Managed",
+    "/Microsoft.ReactNative.Managed.CodeGen",
     "/Microsoft.ReactNative.SharedManaged",
     "/Mso",
     "/PropertySheets",
