--- a/.ado/templates/bump-packages.yml
+++ b/.ado/templates/bump-packages.yml
@@ -3,4 +3,4 @@
 steps:
   - script: |
       npx --no-install beachball bump --branch origin/$(System.PullRequest.TargetBranch) --changehint "Run `yarn change` from root of repo to generate a change file."
-    displayName: Bump Packages
+    displayName: Bump packages
