--- a/vnext/Desktop/React.Windows.Desktop.vcxproj
+++ b/vnext/Desktop/React.Windows.Desktop.vcxproj
@@ -139,7 +139,7 @@
     <Midl Include="..\Microsoft.ReactNative\IJSValueWriter.idl" />
     <Midl Include="..\Microsoft.ReactNative\IReactContext.idl" />
     <Midl Include="..\Microsoft.ReactNative\IJSValueReader.idl" />
-    <Midl Include="..\Microsoft.ReactNative\IViewManager.idl" />
+    <Midl Include="..\Microsoft.ReactNative\IViewManagerCore.idl" />
     <Midl Include="..\Microsoft.ReactNative\IReactDispatcher.idl" />
     <Midl Include="..\Microsoft.ReactNative\IReactNotificationService.idl" />
     <Midl Include="..\Microsoft.ReactNative\IReactNonAbiValue.idl" />
