--- a/vnext/PropertySheets/React.Cpp.props
+++ b/vnext/PropertySheets/React.Cpp.props
@@ -26,9 +26,12 @@
   <Import Project="$(ReactNativeWindowsDir)PropertySheets\ReactPatches.targets" />
 
   <PropertyGroup>
-    <USE_HERMES Condition="'$(USE_HERMES)' == ''">false</USE_HERMES>
-    <HERMES_Version Condition="'$(HERMES_Version)' == ''">0.1.6</HERMES_Version>
+    <USE_HERMES Condition="'$(USE_HERMES)' == ''">true</USE_HERMES>
+    <HERMES_Version Condition="'$(HERMES_Version)' == ''">0.40.2</HERMES_Version>
     <HERMES_Package Condition="'$(HERMES_Package)' == ''">$(SolutionDir)packages\ReactNative.Hermes.Windows.$(HERMES_Version)</HERMES_Package>
+    <!-- TODO: How to distinguish between uwp and win32 here? -->
+    <HERMES_WinPlatform Condition="'$(HERMES_WinPlatform)' == ''">Windows</HERMES_WinPlatform>
+    <HERMES_Root Condition="'$(HERMES_Root)' == ''">$(HERMES_Package)\installed\$(HERMES_WinPlatform)\$(Platform.Replace('x86', 'Win32'))</HERMES_Root>
 
     <USE_V8 Condition="('$(USE_V8)' == '') Or ('$(Platform)' == 'ARM' OR '$(Platform)' == 'ARM64')">false</USE_V8>
     <V8_Version Condition="'$(V8_Version)' == ''">0.3.2</V8_Version>
@@ -57,7 +60,7 @@
   <PropertyGroup>
     <!-- This prop is used for shared JSI code and headers -->
     <JSI_Source Condition="'$(JSI_Source)' == ''">$(ReactNativeDir)\ReactCommon\jsi</JSI_Source>
-    <JSI_Source Condition="'$(USE_HERMES)' == 'true'">$(HERMES_Package)\installed\$(PlatformTarget)-windows\include\jsi_ref</JSI_Source>
+    <JSI_Source Condition="'$(USE_HERMES)' == 'true'">$(HERMES_Root)\include\jsi_ref</JSI_Source>
 
     <!-- This prop is used for JSI code that may be overridden in external JSI implementations -->
     <JSI_SourcePath Condition="'$(JSI_SourcePath)' == ''">$(ReactNativeDir)\ReactCommon\jsi</JSI_SourcePath>
